--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,37 @@
 version: '3.1'
 services:
   stats-server:
+    build: stat/stat-server
+    image: stat/stat-server
+    container_name: stat-server
     ports:
       - "9090:9090"
+    depends_on:
+      - stat-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stat-db:5432/stat
+      - SPRING_DATASOURCE_USER=admin
+      - SPRING_DATASOURCE_PASSWORD=admin
 
-  stats-db:
+  stat-db:
     image: postgres:14-alpine
+    container_name: stat
+    ports:
+      - "6541:5432"
+    volumes:
+      - ./stat/stat-server/src/main/resources/schema.sql
+      - ./pgdata:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_USER=admin
+      - POSTGRES_DB=stat
 
   ewm-service:
+    build: main-service
+    container_name:  main-service
     ports:
       - "8080:8080"
 
-  ewm-db:
-    image: postgres:14-alpine
+#  ewm-db:
+#    image: postgres:14-alpine
+#    container_name: ewm-db
