--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,19 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version>
+		<version>2.7.16</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<name>Explore With Me</name>
+
+	<modules>
+		<module>stat</module>
+		<module>stat/stat-dto</module>
+		<module>stat/stat-client</module>
+		<module>stat/stat-server</module>
+		<module>main-service</module>
+	</modules>
 
 	<groupId>ru.practicum</groupId>
 	<artifactId>explore-with-me</artifactId>
