--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,27 +8,27 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats-db
       - SPRING_DATASOURCE_USER=admin
       - SPRING_DATASOURCE_PASSWORD=admin
 
   stats-db:
     image: postgres:14-alpine
-    container_name: stats
+    container_name: stats-db
     ports:
       - "6541:5432"
     volumes:
       - /stat/stat-server/src/main/resources/schema.sql:/docker-entrypoint-initdb.d/init.sql
       - /var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=stats
+      - POSTGRES_DB=stats-db
       - POSTGRES_PASSWORD=admin
       - POSTGRES_USER=admin
 
-  ewm-service:
-    build: main-service
-    container_name:  main-service
-    ports:
+#  ewm-service:
+#    build: main-service
+#    container_name:  main-service
+#    ports:
       - "8080:8080"
 
 #  ewm-db:
