Feat: этап 1. Сервис статистики

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,10 @@ services:
       - POSTGRES_PASSWORD=admin
       - POSTGRES_USER=admin
 
-#  ewm-service:
-#    build: main-service
-#    container_name:  main-service
-#    ports:
+  ewm-service:
+    build: main-service
+    container_name:  main-service
+    ports:
       - "8080:8080"
 
 #  ewm-db:
