Feat: этап 1. Сервис статистики

--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+service-stat.url=http://localhost:9090
 logging.level.ru.practicum.ewm=debug
 
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
