--- a/stat/stat-server/src/main/resources/application.properties
+++ b/stat/stat-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=9090
 logging.level.ru.practicum.ewm=debug
+service-stat.url=http://localhost:9090
 
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
