--- a/stat/stat-server/pom.xml
+++ b/stat/stat-server/pom.xml
@@ -19,6 +19,12 @@
 
         <dependency>
             <groupId>ru.practicum</groupId>
+            <artifactId>stat-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.practicum</groupId>
             <artifactId>stat-dto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
