--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
-service-stat.url=http://localhost:9090
-logging.level.ru.practicum.ewm=debug
+client.url=http://localhost:9090
+app.name=ewm-main-service
+logging.level.ru.practicum.ewm=trace
 
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
 
